homepage demo headline content edits

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                         <img src="images/shophome.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="caption text-center">
-                        <h4>My Journal My Journey ep3</h4>
-                        <p class="text-muted">muy bonita</p>
+                        <h4>SHOP Spring Throwback SIAM thread series</h4>
+                        <p class="text-muted">Alicia is bringing back SIAM this spring <a href="#">SHOP NOW</a></p>
                     </div>
                 </div>
               </div>
@@ -84,7 +84,7 @@
                         <img src="http://files.sharenator.com/447993.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="caption text-center">
-                        <h4>POst Headline</h4>
+                        <h4>My Journal My journey vol3</h4>
                         <p class="text-muted">2015 marks the return of NYC queen of soul</p>
                     </div>
                 </div>
