3 up post idea on bottom

--- a/index.html
+++ b/index.html
@@ -125,24 +125,33 @@
               </div>
               <div class="row no-gutter">
 
-  <div class="col-md-6 post">
+  <div class="col-md-4 post">
                     <a href="#">
 
                         <img src="https://lh6.googleusercontent.com/-st4JRvSQxXY/TWydlkW_nWI/AAAAAAAAJBs/tPgdxRwE8r8/s1600/American+Musician-Singer+Alicia+Keys+%25285%2529.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="caption ">
-                        <h4>Double Photo as single post</h4>
+                        <h4>triple Photo as single post</h4>
                         <p class="text-muted">This is a link to a Vault Post from the past! Read More</p>
                     </div>
                 </div>
 
-  <div class="col-md-6 post">
+  <div class="col-md-4 post">
                     <a href="#">
 
                         <img src="http://files.sharenator.com/447993.jpg" class="img-responsive" alt="">
                     </a>
                     
                 </div>
+
+  <div class="col-md-4 post">
+                    <a href="#">
+
+                        <img src="http://i45.photobucket.com/albums/f90/Tehu_dropuke/100_0115.jpg" class="img-responsive" alt="">
+                    </a>
+                    
+                </div>
+
               </div>
 
   </div>
