mad changes real quick

--- a/centered.html
+++ b/centered.html
@@ -18,11 +18,28 @@
 <body>
 
   <div class="container">
+  
+  <div class='row'>
+
+      <div class="col-md-1">
+          <a href="index.html">
+            <img class="img-responsive" src="images/logo.png">
+          </a>
+      </div>
+
+
+     <div class="col-md-6  pull-right text-right freight">
+     <a href="music.html">Music</a> / <a href="videos.html">Videos</a> / <a href="jorunal.html">Journal</a> / <a href="vault.html">Vault</a>
+    </div>
+  </div>
+
+  <div class="row dirty-south">
   <div class="row">
 
     <div class="col-md-9 center-block text-center">
-        <img class="img-responsive" src="http://c3.staticflickr.com/3/2822/9206875513_88b34591a4_b.jpg"><div class="share"><p>the p is free</p>
-      <h1>Alicia Keys Studio Sessions Vol 2</h1>
+        <img class="img-responsive" src="http://c3.staticflickr.com/3/2822/9206875513_88b34591a4_b.jpg"><div class="share">
+        <p>Grammed by a Great</p>
+      <h1>Alicia Keys Studio Sessions</h1>
       <small>Posted date etc</small>
        <p class="text-left">Organic 90's meh pork belly Schlitz forage, swag ugh cardigan ethical High Life typewriter street art farm-to-table meditation.  Twee skateboard bitters, master cleanse lomo butcher messenger bag McSweeney's biodiesel blog Wes Anderson flexitarian umami 90's tofu.  XOXO typewriter cold-pressed, Godard artisan single-origin coffee heirloom.  Brunch selfies occupy, Vice ennui cornhole typewriter Blue Bottle.  Banh mi bicycle rights hashtag, heirloom blog health goth biodiesel dreamcatcher 3 wolf moon Bushwick.  Carles salvia irony Vice bicycle rights sriracha cornhole banh mi, scenester twee Tumblr.  Occupy fashion axe four dollar toast, bespoke post-ironic craft beer leggings shabby chic art party normcore DIY.</p 
     </div>
