--- a/music.html
+++ b/music.html
@@ -20,7 +20,21 @@
 
   <div class="container">
   
-  <div class="row">
+  <div class='row'>
+
+      <div class="col-md-1">
+          <a href="index.html">
+            <img class="img-responsive" src="images/logo.png">
+          </a>
+      </div>
+
+
+     <div class="col-md-6  pull-right text-right freight">
+     <a href="music.html">Music</a> / <a href="videos.html">Videos</a> / <a href="jorunal.html">Journal</a> / <a href="vault.html">Vault</a>
+    </div>
+  </div>
+
+  <div class="row dirty-south">
         <div class="col-md-5">
           <img class="img-responsive" src="http://3.bp.blogspot.com/-QgVOlN58zHw/VBSXv3rvsdI/AAAAAAAAOxI/x5XuHKUgV6Y/s1600/Alicia-Keys-Songs-In-a-Minor-Album-Cover.jpg"></div>
 
