--- a/quote.html
+++ b/quote.html
@@ -17,7 +17,23 @@
 
 <body>
 
-  <div class="container">
+ <div class="container">
+  
+  <div class='row'>
+
+      <div class="col-md-1">
+          <a href="index.html">
+            <img class="img-responsive" src="images/logo.png">
+          </a>
+      </div>
+
+
+     <div class="col-md-6  pull-right text-right freight">
+     <a href="music.html">Music</a> / <a href="videos.html">Videos</a> / <a href="jorunal.html">Journal</a> / <a href="vault.html">Vault</a>
+    </div>
+  </div>
+
+  <div class="row dirty-south">
 <p class="text-center">Center aligned text.</p>
 <div class="well">
         <h1>"The more you understand everyone's process the better you will be at your job"</h1>
